--- a/style.css
+++ b/style.css
@@ -321,6 +321,7 @@ nav ul li:hover {
 }
 .yourCollegeResult {
   display: flex;
+  margin-top: 10%;
   justify-content: space-around;
 }
 .yourCollegeResult span {
