--- a/mediascreen.css
+++ b/mediascreen.css
@@ -2,7 +2,7 @@
   margin: 0;
   padding: 0;
 }
-@media screen and (min-width: 400px) and (max-width: 900px) {
+@media screen and (min-width: 100px) and (max-width: 900px) {
   nav{
     top: 0%;
     padding-top: 2%;
@@ -10,6 +10,11 @@
   }
   #admission {
     font-size: 20px;
+  }
+  nav ul{
+    /* background-color: red; */
+    height: 10vh;
+    overflow: scroll;
   }
   #phone-number{
     padding: 8px 10px;
@@ -64,11 +69,11 @@
     font-weight: 600;
     font-size: 1em;
     border-radius: 8px 0px 0px 0px;
-    width: 26%;
+    min-width: 125px;
   }
   .Apply-now {
     top: 65%;
-    width: 20%;
+    min-width: 105px;
     padding: 12px 10px;
     font-weight: 900;
     font-size: 1em;
