--- a/style.css
+++ b/style.css
@@ -560,6 +560,107 @@ nav {
 }
 
 
-@media screen and (min-width: 600px) and (max-width: 1200px) {
-  /* Your styles here */
+
+@media screen and (min-width: 00px) and (max-width: 420px) {
+  .img-admission {
+    height: fit-content;
+    color: navy;
+    font-weight: 900;
+    font-size: .75em;
+    border-radius: 8px;
+    /* background-color: orange; */
+    /* margin-top: 5%; */
+    display: flex;
+    /* flex-direction: column; */
+  }
+  nav{
+    justify-content: center;
+    align-items: center;
+    /* height: 20vh !important; */
+    flex-wrap: wrap;
+  }
+  #phone-number {
+    padding: 8px 10px;
+    font-weight: 600;
+    font-size: 1rem;
+    position: absolute;
+    top: 100px;
+  }
+  #admission {
+    font-size: 10px;
+  }
+  nav ul li{
+    /* background-color: red; */
+    /* height: 10vh; */
+    font-size: 14px;
+    overflow: scroll;
+  }
+  nav ul {
+    /* background-color: red; */
+    /* height: 10vh; */
+    margin-left: 0px;
+    align-self: flex-start;
+    overflow: scroll;
+   padding-left: 0rem;
+  }
+  .my-card {
+    margin-top: 2vh;
+    margin-left: 2vw !important;
+    border-top-left-radius: 2%;
+    border-top-right-radius: 2%;
+  }
+}
+@media screen and (min-width: 00px) and (max-width: 420px) {
+  .img-admission {
+    height: fit-content;
+    color: navy;
+    font-weight: 900;
+    font-size: 0.75em;
+    border-radius: 8px;
+    /* background-color: orange; */
+    /* margin-top: 5%; */
+    display: flex;
+    /* flex-direction: column; */
+  }
+  nav {
+    justify-content: center;
+    align-items: center;
+  }
+  #admission {
+    font-size: 10px;
+  }
+  nav ul li {
+    /* background-color: red; */
+    /* height: 10vh; */
+    font-size: 14px;
+    overflow: scroll;
+  }
+  nav ul {
+    /* background-color: red; */
+    /* height: 10vh; */
+    margin-left: 0px;
+    align-self: flex-start;
+    overflow: scroll;
+    padding-left: 0rem;
+  }
+  /* nav {
+    top: 0%;
+    padding-top: 2%;
+    height: 12vh !important;
+    width: 100%;
+    align-items: center;
+  } */
+  .my-card {
+    margin-top: 2vh;
+    margin-left: 2vw !important;
+    border-top-left-radius: 2%;
+    border-top-right-radius: 2%;
+  }
+  .college {
+    min-width: 70vw;
+    height: 50vh !important;
+  }
+  .college-photo-rapper {
+    height: 30vh !important;
+  }
 }
