--- a/style.css
+++ b/style.css
@@ -108,6 +108,7 @@ nav ul li:hover {
 .yourimage h1 {
   margin-top: 10vh;
   text-align: center;
+  font-weight: 700;
 }
 .aos-init {
   margin-top: 10vh;
